Fixed components label issues with vertical overflow CSS

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -200,7 +200,7 @@
 			// background-color: #fffce9;
 			padding: 1rem;
 			padding-bottom: 0px;
-			padding-top: 0.5rem;
+			padding-top: 0.4rem;
 			// flex: 1 0 calc(20% - 2em);
 			flex: 1 1 100%;
 
